[gd_scene load_steps=10 format=3 uid="uid://dp60vrvcbt3lo"]

[ext_resource type="Script" uid="uid://dprlf68i7jmsd" path="res://Player/player.gd" id="1_btcbx"]
[ext_resource type="Texture2D" uid="uid://criy10cot6gnx" path="res://Textures/Player/player_sprite.png" id="1_l8h54"]
[ext_resource type="PackedScene" uid="uid://4q6qgr6m2imm" path="res://Utility/hurtbox.tscn" id="3_btcbx"]
[ext_resource type="PackedScene" uid="uid://cln6w0mlch73t" path="res://Player/healthbar.tscn" id="4_healthbar"]
[ext_resource type="PackedScene" uid="uid://b5c6d7e8gag0h" path="res://Weapons/auto_weapon.tscn" id="5_autoweapon"]
[ext_resource type="PackedScene" uid="uid://dc3dw7mq0tqbu" path="res://UI/blue_square_counter.tscn" id="6_counter"]
[ext_resource type="PackedScene" path="res://UI/exp_bar.tscn" id="7_expbar"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
radius = 9.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwnis"]
size = Vector2(11, 20)

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_btcbx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_l8h54")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BlueSquareCounter" parent="Camera2D" instance=ExtResource("6_counter")]
z_index = 100
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -304.0
offset_top = 107.0
offset_right = -154.0
offset_bottom = 167.0

[node name="ExpBar" parent="Camera2D" instance=ExtResource("7_expbar")]
offset_left = -300.0
offset_top = -180.0
offset_right = -100.0
offset_bottom = -164.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 7)
shape = SubResource("CapsuleShape2D_4ntmi")

[node name="walk_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource("3_btcbx")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(1.5, 3)
shape = SubResource("RectangleShape2D_gwnis")

[node name="HealthBar" parent="." instance=ExtResource("4_healthbar")]
offset_left = -20.0
offset_top = 30.0
offset_right = 20.0
offset_bottom = 38.0

[node name="AutoWeapon" parent="." instance=ExtResource("5_autoweapon")]
projectile_speed = 100.0

[connection signal="health_changed" from="." to="HealthBar" method="update_health"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]

[editable path="Hurtbox"]
